# da2

./: .gitignore  CHANGELOG.md  README.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
da2/: apiStatus.py  boostrap.py  cli2cmd.py  command.py  entity.py  exceptions.py  hasMany.py  hasManyAsync.py  jsonMixin.py  many.py  obj2desc.py  observable.py  repo.py  repoAsync.py  uowAsync.py  utils.py
examples/: 01_basic_cqrs.py  02_with_repository.py  03_async_api.py  04_event_sourcing.py  05_projection.py  06_process_manager.py  07_policy.py  08_full_integration.py  09_middleware.py  10_idempotency.py  11_event_upcasting.py  12_global_event_stream.py  13_redis_global_stream.py  14_outbox_pattern.py
src/da2/: __init__.py  bootsrapAsync.py  bootstrap.py  bootstrap_async.py  cli2cmd.py  command.py  container.py  dependencyInjectionContainer.py  entity.py  entityRepo.py  event.py  event_sourced.py  event_sourced_repository.py  event_sourced_repository_async.py  event_store.py  event_store_async.py  exceptions.py  hasOne.py  idempotency.py  idempotency_async.py  message_bus.py  message_bus_async.py  messagebus.py  messagebusAsync.py  obj2desc.py  outbox.py  outbox_async.py  policy.py  policy_async.py  process_manager.py  process_manager_async.py  projection.py  projection_async.py  redis_event_store.py  redis_event_store_async.py  redis_idempotency_store.py  redis_idempotency_store_async.py  redis_outbox.py  redis_outbox_async.py  redis_snapshot_store.py  (+9 more)
tests/: test_bootstrap.py  test_container.py  test_entity.py  test_event_sourced.py  test_event_sourced_repository.py  test_event_sourced_repository_async.py  test_event_store.py  test_event_store_async.py  test_global_stream.py  test_idempotency.py  test_idempotency_async.py  test_message_bus.py  test_message_bus_async.py  test_middleware.py  test_middleware_async.py  test_outbox.py  test_outbox_async.py  test_policy.py  test_policy_async.py  test_process_manager.py  test_process_manager_async.py  test_projection.py  test_projection_async.py  test_redis_event_store.py  test_redis_event_store_async.py  test_redis_idempotency_store.py  test_redis_idempotency_store_async.py  test_redis_integration.py  test_redis_outbox.py  test_redis_outbox_async.py  test_redis_snapshot_store.py  test_redis_snapshot_store_async.py  test_repository.py  test_snapshot.py  test_uow.py  test_upcaster.py
