[project]
name = "da2"
version = "0.2.0"
description = "Python DDD and Event-Driven Architecture framework"
authors = [
    {name = "warren-wupeng", email = "warren.wu@visionwx.com"},
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["ddd", "domain-driven-design", "event-driven", "cqrs", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
redis = ["redis>=5.0.0"]

[dependency-groups]
dev = [
    "redis>=5.0.0",
    "pytest>=7.4.1",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/da2"]
