[project]
name = "da2"
version = "0.10.0"
description = "Python DDD and Event-Driven Architecture framework with Event Sourcing"
authors = [
    {name = "warren-wupeng", email = "warren.wu@visionwx.com"},
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["ddd", "domain-driven-design", "event-driven", "cqrs", "event-sourcing", "python", "saga", "process-manager", "middleware"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/warren-wupeng/da2"
Repository = "https://github.com/warren-wupeng/da2"
Issues = "https://github.com/warren-wupeng/da2/issues"
Changelog = "https://github.com/warren-wupeng/da2/blob/main/CHANGELOG.md"

[project.optional-dependencies]
redis = ["redis>=5.0.0"]

[dependency-groups]
dev = [
    "redis>=5.0.0",
    "pytest>=7.4.1",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "fakeredis[lua]>=2.34.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/da2"]
